[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-respawnmessage"
version = "0.1.0"
description = "A simple plugin that sends a title and subtitle when you respawn"

[project.entry-points."endstone"]
respawnmessage = "endstone_respawnmessage:respawnMessage"
